--- a/main.css
+++ b/main.css
@@ -4,33 +4,21 @@
 }
 
 #map{
-  height: 400px;
-  width: 100%;
+  height: 700px;
+  width: 95%;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-body{
-  margin: 5px;
-}
 
-.zip-search{
+.container{
   position: relative;
-  height: 65px;
-  width: 40%;
-  border: 2px solid black;
-  border-radius: 5px;
-  font-size: 30px;
-  margin: 10px;
-  padding-left: 10px;
+  bottom: 80px;
+  left: 40px;
+  font-size: 15px;
 }
 
-.search-button{
-  height: 65px;
-  width: 70px;
-  border: 2px solid black;
-  border-radius: 5px;
-  position: relative;
-  top: -7px;
-  padding-top: 3px;
-  background-color: white;
+#submit-zip, #zip-search{
+  height: 40px;
+  font-size: 15px;
 }
-
