--- a/main.css
+++ b/main.css
@@ -4,21 +4,25 @@
 }
 
 #map{
+  position: relative;
   height: 700px;
-  width: 95%;
+  width: 100%;
   margin-right: auto;
   margin-left: auto;
 }
 
-
-.container{
-  position: relative;
-  bottom: 80px;
-  left: 40px;
-  font-size: 15px;
+.container-form{
+  position: absolute;
+  top: 100px;
+  left: 50px;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 2px;
+  padding: 10px;
 }
 
-#submit-zip, #zip-search{
-  height: 40px;
-  font-size: 15px;
+
+#zip-search, #submit-zip{
+  display: block;
+  margin-top: 5px;
 }
