--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 
 #map{
   position: relative;
-  height: 700px;
+  height: 600px;
   width: 100%;
   margin-right: auto;
   margin-left: auto;
@@ -25,4 +25,13 @@
 #zip-search, #submit-zip{
   display: block;
   margin-top: 5px;
+}
+
+.name{
+  text-decoration: underline;
+}
+
+.location-obj{
+  display: inline-block;
+  padding: 5px 10px;
 }
