--- a/main.css
+++ b/main.css
@@ -2,32 +2,55 @@
 *{
   box-sizing: border-box;
 }
+html, body{
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
 #map{
   position: relative;
   height: 700px;
-  width: 95%;
+  width: 100%;
   margin-right: auto;
   margin-left: auto;
 }
 
 .container-form{
   position: absolute;
-  top: 100px;
-  left: 50px;
+  top: 50px;
+  left: 20px;
   background-color: white;
   border: 1px solid black;
   border-radius: 2px;
   padding: 10px;
-}
-
-
-#zip-search, #submit-zip{
-  display: block;
-  margin-top: 5px;
+  height: 180px;
 }
 
 .name{
   text-decoration: underline;
 }
 
+#zip-search{
+  width: 100%;
+  font-size: 20px;
+  height: 40px;
+  padding-left: 10px;
+  border: 1px solid black;
+  margin-top: 10px;
+}
+
+#zip-label{
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 20px;
+}
+
+#submit-zip{
+  margin-top: 10px;
+  height: 40px;
+  width: 100%;
+  border: 1px solid black;
+  background-color: black;
+  color: white;
+}
